@@ -9,6 +9,7 @@
 * Client/WebUI/Miners: Shows version data only for the recent blocks (as BIP9 has not been used for awhile)
 * Client: Fixed how the average TX fee is caluclated over "CFG.Stat.FeesBlks" (it was showing too low values)
 * Client: Don't send "getmp" messages if Mempool is more than half full
+* Tools/bdb - new command "-compress" to compress a "bl*.dat" file (after running node without "CFG.Memory.CompressBlockDB")
 
 1.10.2 - 2022-09-06:
 * Client: New config value "Memory.CompressBlockDB" (default true)
